--- a/loans-server.yml
+++ b/loans-server.yml
@@ -11,7 +11,7 @@
 loans:
  message: "Welcome to loans service -(server)"
  contactDetails:
-   name: "Dibyendu Kar"
+   name: "Dibyendu---"
    email: "b@gmail.com"
  customerCare:
    - (+91) 9101021010
